module/core/former/tests/inc/enum_named_tests/compile_fail/struct_zero_subform_scalar_error.rs
#[ derive( Debug, PartialEq, former::Former ) ]
pub enum EnumWithNamedFields
{
  // S0.5: Zero-field struct variant with #[subform_scalar] (expected compile error)
  #[ subform_scalar ]
  VariantZeroSubformScalar {},
}

fn main() {} // Required for trybuild